Aggiunta interfaccia di comunicazione con database.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/smarthome
 spring.datasource.username=postgres
 spring.datasource.password=12345678
 
+#Questo fa si che ogni volta che riavvio il programma elimina il vecchio db e ne crea uno nuovo.
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.show-sql=true
