--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Smart Home project</description>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.organization>unimibsoftengcourse2022</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -51,5 +53,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
