--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,10 +4,10 @@ name: Build
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
     types: [opened, synchronize, reopened]
 jobs:
   build:
