--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,13 @@
 			<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
 			<version>1.2.1</version>
 		</dependency>
+		<dependency>
+
+			<groupId>org.springframework.boot</groupId>
+
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+
+		</dependency>
 
 
 
