--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/smarthome
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=123456
 
 #Questo fa si che ogni volta che riavvio il programma elimina il vecchio db e ne crea uno nuovo.
 spring.jpa.hibernate.ddl-auto=create-drop
